2005-06-19  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_shutdown): Replace the flawed shutdown
	interposition handler by a reference count for handling multiple
	skin attachments.

2005-06-18  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/posix.h: Added initial support for message queues.

2005-06-12  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.8 (Time Machine)

2005-06-10  Philippe Gerum  <rpm@xenomai.org>

	* skins/posix/thread.c: Add pthread_set_mode_np() for changing the
	shield state and arming the switch trap signal.

	* nucleus/pod.c: Survey page faults over shadow contexts to track
	down memory locking problems. /proc/rtai/stats displays the new PF
	counter accordingly.

2005-06-10  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/syscall.c (__pthread_create): Destroy thread when
	mapping fails.

	* skins/posix/thread.c (thread_delete_hook): As required by the
	specification, postpone marking the thread as detached until after
	we are sure that a joiner was not canceled.

2005-06-09  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/lib/alarm.c: Implement the missing support.

2005-06-09  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* include/nucleus/pipe.h, skins/rtai/pipe.h: Move rt_pipe_write()
	mode bits to a place also visible from user-space context.

2005-06-09  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i*/system.h (xnarch_init_fpu):
	Initialization of fusion threads in primary mode.

2005-06-08  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to r11c1 which fixes a nasty bug in
	__adeos_setscheduler_root().
	
	* arch/ia64/patches: Upgrade to r7c11; same reason as above.
	
	* arch/ppc/patches: Upgrade to r7c3; same reason as above.
	
	* include/nucleus/asm-i386/syscall.h: Use VSYSCALL support.

2005-06-08  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
